oof no longer aligned

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -114,13 +114,24 @@ html {
     border-top: 4px solid #7D7DBB;
     border-bottom: 4px solid #7D7DBB;
   }
+  .navtab {
+    align: right;
+    text-width: 100%;
+    background-color: #7D7DBB;
+    text-decoration: none;
+  }
+  td {
+    color: white;
+    background-color: #7D7DBB;
+    vertical-align: right;
+    width: 100%;
   footer {
     padding-top: 2em;
     padding-bottom: 3em;
   }
   table {
-	  table-layout: fixed;
-}
+    table-layout: fixed;
+  }
   *::-moz-selection {
     background: black;
     color: white;
